force-app/main/default/objects/pdf_content__c/pdf_content__c.object-meta.xml
<CustomObject>
    <label>PDF Content</label>
    <nameField>
        <label>pdf_content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>