force-app/main/default/objects/pdf_content__c/fields/currency_14__c.field-meta.xml
<CustomField>
    <fullName>currency_14__c</fullName>
    <label>currency_14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>