force-app/main/default/objects/pdf_content__c/fields/currency_15__c.field-meta.xml
<CustomField>
    <fullName>currency_15__c</fullName>
    <label>currency_15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>