force-app/main/default/objects/pdf_content__c/fields/currency_17__c.field-meta.xml
<CustomField>
    <fullName>currency_17__c</fullName>
    <label>currency_17</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>