force-app/main/default/objects/pdf_content__c/fields/doc_name__c.field-meta.xml
<CustomField>
    <fullName>doc_name__c</fullName>
    <label>doc_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>