force-app/main/default/objects/pdf_content__c/fields/float_1__c.field-meta.xml
<CustomField>
    <fullName>float_1__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>float_1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>