force-app/main/default/objects/pdf_content__c/fields/float_2__c.field-meta.xml
<CustomField>
    <fullName>float_2__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>float_2</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>