force-app/main/default/objects/pdf_content__c/fields/long_text_area_3__c.field-meta.xml
<CustomField>
    <fullName>long_text_area_3__c</fullName>
    <label>long_text_area_3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>