force-app/main/default/objects/pdf_content__c/fields/number_10__c.field-meta.xml
<CustomField>
    <fullName>number_10__c</fullName>
    <label>number_10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>