force-app/main/default/objects/pdf_content__c/fields/related_id__c.field-meta.xml
<CustomField>
    <fullName>related_id__c</fullName>
    <externalId>true</externalId>
    <label>related_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>