force-app/main/default/objects/pdf_content__c/fields/rich_text_area_12__c.field-meta.xml
<CustomField>
    <fullName>rich_text_area_12__c</fullName>
    <label>rich_text_area_12</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>