force-app/main/default/objects/pdf_content__c/fields/text_10__c.field-meta.xml
<CustomField>
    <fullName>text_10__c</fullName>
    <label>text_10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>