force-app/main/default/objects/pdf_content__c/fields/text_11__c.field-meta.xml
<CustomField>
    <fullName>text_11__c</fullName>
    <label>text_11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>