force-app/main/default/objects/pdf_content__c/fields/text_13__c.field-meta.xml
<CustomField>
    <fullName>text_13__c</fullName>
    <label>text_13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>