force-app/main/default/objects/pdf_content__c/fields/text_area_4__c.field-meta.xml
<CustomField>
    <fullName>text_area_4__c</fullName>
    <label>text_area_4</label>
    <type>TextArea</type>
</CustomField>